# jsxer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Overlord.jsxbin.jsx  README.md  TODO.md  decompiler_bindings.py  main.cpp
.github/workflows/: build-release.yaml  cmake.yml  run-tests.yaml
bindings/python/: decompiler.py
crates/jsxer_cli/: Cargo.toml
crates/jsxer_cli/src/: main.rs
crates/jsxer_core/: Cargo.toml
crates/jsxer_core/src/: ast.rs  lib.rs
include/: jsxbin.h  jsxer.h
jsxbin/: ScanState.cpp  ScanState.h  decoders.cpp  decoders.h  jsxbin.cpp  jsxbin.h
jsxbin/nodes/: AbstractNode.h  ArgumentList.cpp  ArgumentList.h  ArrayExpr.cpp  ArrayExpr.h  ArrayIndexingExpr.cpp  ArrayIndexingExpr.h  AssignmentExpr.cpp  AssignmentExpr.h  BinaryExpr.cpp  BinaryExpr.h  ConditionalExpr.cpp  ConditionalExpr.h  ConstDeclaration.cpp  ConstDeclaration.h  DebuggerStatement.cpp  DebuggerStatement.h  DeleteExpr.cpp  DeleteExpr.h  DoWhileExpr.cpp  DoWhileExpr.h  ExprNode.cpp  ExprNode.h  ForInStatement.cpp  ForInStatement.h  ForStatement.cpp  ForStatement.h  FunctionCallExpr.cpp  FunctionCallExpr.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionExpr.cpp  FunctionExpr.h  IdNode.cpp  IdNode.h  IdRefExpr.cpp  IdRefExpr.h  IfStatement.cpp  IfStatement.h  IncrementExpr.cpp  (+51 more)
old_cpp/: CMakeLists.txt
old_cpp/bindings/python/: decompiler.py
old_cpp/src/cli/: main.cpp
old_cpp/src/dll/: library.cpp  library.h
old_cpp/src/jsxer/: decoders.cpp  decoders.h  reader.h
old_cpp/src/jsxer/nodes/: ArrayExpression.cpp  BinaryExpression.h  BreakStatement.cpp  BreakStatement.h  CallExpression.cpp  ConstAssignment.cpp  ConstantLiteral.cpp  ConstantLiteral.h  DebuggerStatement.cpp  ExpressionStatement.cpp  ExpressionStatement.h  ForInStatement.cpp  ForStatement.cpp  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionExpression.cpp  Identifier.cpp  Identifier.h  IfStatement.h  IndexingExpression.cpp  IndexingExpression.h  LocalIdentifier.cpp  LocalUpdateExpression.h  LogicalExpression.cpp  LogicalExpression.h  MemberExpression.cpp  MemberExpression.h  ObjectExpression.h  ReturnStatement.cpp  StatementList.h  SwitchStatement.cpp  SwitchStatement.h  TernaryExpression.cpp  TernaryExpression.h  ThisExpression.cpp  ThisExpression.h  ThrowStatement.cpp  ThrowStatement.h  TryStatement.cpp  TryStatement.h  (+10 more)
old_cpp/tests/data/jsx/: array-expr.jsx
old_cpp/tests/data/jsxbin/: README.txt
old_cpp/tests/src/: common.h  exp.cpp  n2s-formatting.cpp
old_cpp/tools/test-runner.js/: .gitignore  LICENSE  package.json
pybind/: pybind.cpp  pybind.h
src/cli/: main.cpp  utils.h
src/dll/: library.cpp  library.h
src/emscripten/: main.cpp
src/jsxbin/: ScanState.cpp  ScanState.h  common.h  decoders.cpp  decoders.h  jsxbin.cpp  reader.cpp  reader.h  util.cpp  util.h
src/jsxbin/nodes/: AbstractNode.h  ArgumentList.cpp  ArgumentList.h  ArrayExpr.cpp  ArrayExpr.h  ArrayExpression.cpp  ArrayExpression.h  ArrayIndexingExpr.cpp  ArrayIndexingExpr.h  AssignmentExpr.cpp  AssignmentExpr.h  AssignmentExpression.cpp  AssignmentExpression.h  AstNode.h  BinaryExpr.cpp  BinaryExpr.h  BinaryExpression.cpp  BinaryExpression.h  BreakStatement.h  CallExpression.cpp  CallExpression.h  ConditionalExpr.cpp  ConditionalExpr.h  ConstAssignment.cpp  ConstAssignment.h  ConstDeclaration.cpp  ConstDeclaration.h  ConstantLiteral.cpp  ConstantLiteral.h  DebuggerStatement.cpp  DebuggerStatement.h  DeleteExpr.cpp  DeleteExpr.h  DoWhileExpr.cpp  DoWhileExpr.h  DoWhileStatement.cpp  DoWhileStatement.h  EmptyExpression.cpp  EmptyExpression.h  ExprNode.cpp  (+114 more)
src/jsxer/: common.h  decoders.cpp  decoders.h  deobfuscation.cpp  deobfuscation.h  jsxer.cpp  n2s.h  reader.cpp  reader.h  util.cpp  util.h
src/jsxer/nodes/: ArrayExpression.cpp  ArrayExpression.h  AssignmentExpression.cpp  AssignmentExpression.h  AstNode.h  BinaryExpression.cpp  BinaryExpression.h  BreakStatement.cpp  BreakStatement.h  CallExpression.cpp  CallExpression.h  ConstAssignment.cpp  ConstAssignment.h  ConstantLiteral.cpp  ConstantLiteral.h  DebuggerStatement.cpp  DebuggerStatement.h  DoWhileStatement.cpp  DoWhileStatement.h  ExpressionStatement.cpp  ExpressionStatement.h  ForInStatement.cpp  ForInStatement.h  ForStatement.cpp  ForStatement.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionExpression.cpp  FunctionExpression.h  Identifier.cpp  Identifier.h  IfStatement.cpp  IfStatement.h  IndexingExpression.cpp  IndexingExpression.h  ListExpression.cpp  ListExpression.h  LocalAssignmentExpression.cpp  LocalAssignmentExpression.h  LocalIdentifier.cpp  (+53 more)
tests/: test.jsx
tests/data/jsx/: README.txt
tests/data/v1.0/: arrays.jsxbin  assignment_operators.jsxbin  binary_bitwise_operators.jsxbin  comparison_operators.jsxbin  conditional_operator.jsx  conditional_operator.jsxbin  do_while_loop.jsxbin  exceptions.jsxbin  for_in_loop.jsx  for_in_loop.jsxbin  for_loop.jsx  for_loop.jsxbin  functions.jsxbin  if_statement.jsx  if_statement.jsxbin  labels.jsx  labels.jsxbin  logical_operators.jsxbin  methods.jsx  methods.jsxbin  objects.jsxbin  regex.jsx  regex.jsxbin  strings.jsx  strings.jsxbin  switch_statement.jsx  switch_statement.jsxbin  unary_arithmetic_operators.jsxbin  unary_bitwise_operators.jsx  unary_bitwise_operators.jsxbin  unicode_string.jsx  unicode_string.jsxbin  variables.jsxbin  while_loop.jsxbin  with_statement.jsxbin  xml.jsx  xml.jsxbin
tests/data/v2.0/: arrays.jsx  arrays.jsxbin  assignment_operators.jsx  assignment_operators.jsxbin  binary_arithmetic_operators.tempJsx  binary_arithmetic_operators.tempJsxbin  binary_bitwise_operators.jsx  binary_bitwise_operators.jsxbin  comparison_operators.jsx  comparison_operators.jsxbin  conditional_operator.jsxbin  do_while_loop.jsx  do_while_loop.jsxbin  exceptions.jsx  exceptions.jsxbin  for_in_loop.jsxbin  for_loop.jsxbin  functions.jsx  functions.jsxbin  objects.jsx  (+23 more)
tests/src/: array-expr.cpp  for-stmt.cpp  member-expr.cpp  obj-expr.cpp
tools/test-runner/: package.json  tsconfig.json
tools/test-runner.js/: .gitignore  package.json  tsconfig.json  tsup.config.ts
(+6 files in other folders)
